--- a/lab-05-thymeleaf/src/main/resources/templates/product/create-product.html
+++ b/lab-05-thymeleaf/src/main/resources/templates/product/create-product.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-md-3">
 
-                    <form method="post"> <!-- todo post action with thymeleaf-->
+                    <form th:action="@{/create-product}" th:object="${product}" method="post">
                         <div class="row">
                             <div class="form-group blu-margin" th:class="'form-group'">
                                 <label>Name</label>
