--- a/lab-05-thymeleaf/src/main/resources/templates/product/list.html
+++ b/lab-05-thymeleaf/src/main/resources/templates/product/list.html
@@ -15,9 +15,9 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6">
-            <h2 >No Product yet!</h2> <!-- todo check product list equals not zero, otherwise it always print No product yet-->
+            <h2 th:if="${productList.isEmpty()}" >No Product yet!</h2>
 
-            <div ><!-- todo check product list equals not zero, otherwise it will not show the created products-->
+            <div th:unless="${productList.isEmpty()}" >
                 <h2 class="my-5">Products</h2>
                 <table class="table table-striped table-responsive-md">
                     <thead>
